--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,13 +5,15 @@
     android:id="@+id/fragmentAccountLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.userHome$PlaceholderFragment"
+    tools:context=".home.userHome"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginTop="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.RecyclerView
+        android:textDirection="rtl"
+        android:layoutDirection="rtl"
         android:id="@+id/accountListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
