--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragmentPayLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.userHome$PlaceholderFragment"
+    tools:context=".home.userHome"
     android:orientation="vertical">
 
 
@@ -14,6 +14,8 @@
         android:layout_height="470dp"
         android:orientation="vertical"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:textDirection="rtl"
+        android:layoutDirection="rtl"
         android:layout_marginStart="@dimen/activity_horizontal_margin">
 
         <android.support.v7.widget.RecyclerView
