--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -9,11 +9,13 @@
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
     android:layout_marginTop="@dimen/activity_vertical_margin"
-    tools:context=".home.userHome$PlaceholderFragment"
+    tools:context=".home.userHome"
     android:orientation="vertical">
 
 
     <android.support.v7.widget.RecyclerView
+        android:textDirection="rtl"
+        android:layoutDirection="rtl"
         android:id="@+id/serviceListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
