--- a/app/src/main/res/layout/nav_header_user_home.xml
+++ b/app/src/main/res/layout/nav_header_user_home.xml
@@ -13,22 +13,19 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/userPhoto"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/ic_city"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/avatar" />
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/userNameNaveHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:hint="user name"
-        android:textSize="@dimen/BoldText"
-        android:textAlignment="textEnd"
+        android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
+    />
 
 </LinearLayout>
