--- a/app/src/main/res/menu/activity_admin_home_drawer.xml
+++ b/app/src/main/res/menu/activity_admin_home_drawer.xml
@@ -5,33 +5,38 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_admain_pay"
+            android:title="اضافة دفعة" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_admain_user"
+            android:title="مستخدمين" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_admain_groups"
+            android:title="المجموعات" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_admain_service"
+            android:title="الخدمات" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_admain_addUser"
+                android:title="اضافة مستخدم" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_admain_addService"
+                android:title="اضافة خدمة" />
+            <item
+                android:id="@+id/nav_admain_addGrouops"
+                android:title="اضافة مجموعة" />
+        </menu>
+    </item>
+
+    <item android:title="">
+        <menu>
+            <item
+                android:id="@+id/nav_admain_logout"
+                android:title="تسجيل الخروج" />
         </menu>
     </item>
 
