--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="textView">#2d6460</color>
     <color name="textTitel">#cf3918</color>
 
+    <color name="black">#000</color>
+    <color name="orange">#139D57</color>
+    <color name="white">#FFF</color>
+
 </resources>
 
 
